--- a/app/src/main/res/layout/candidate_detailed_information.xml
+++ b/app/src/main/res/layout/candidate_detailed_information.xml
@@ -40,7 +40,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Certified Candidate Name"
+                android:padding="5dp"
+                android:text="Name"
                 android:textStyle="bold"
                 android:textSize="20sp"/>
 
@@ -402,6 +403,28 @@
         </TableRow>
     </TableLayout>
     </android.support.v7.widget.CardView>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="6dp"
+        android:weightSum="2">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Call"
+            android:layout_weight="1"
+
+            style="@style/call_btn"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Mail"
+            android:layout_weight="1"
+            style="@style/mail_btn"/>
+    </LinearLayout>
 </LinearLayout>
 
 </ScrollView>
