--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,30 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="call_btn">
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:background">#1cbf5a</item>
+    </style>
+
+    <style name="mail_btn">
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:background">#f5c12121</item>
+    </style>
+
+    <style name="student_list_card">
+        <item name="android:padding">4dp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#df000000</item>
+
+    </style>
+
+    <style name="student_list_card_field">
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
 </resources>
