--- a/app/src/main/res/layout/training_center_info.xml
+++ b/app/src/main/res/layout/training_center_info.xml
@@ -13,7 +13,7 @@
     android:paddingTop="10dp">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/training_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="7dp"
